--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                 
                 <h3>Hi, There!</h3>
                 <h1>I am <span class="input"></span></h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel doloribus, maxime sapiente at impedit</p>
+                <p>Software developer.Front End web developer. Majoring in Software Engineering.</p>
                 <div class="social">
                     <a href="https://www.linkedin.com/in/samuel-anselmo-506440128/" target="_blank"><i class="fa-brands fa-linkedin-in" target="_blank"></i></a>
                     <a href="https://twitter.com/SamuelAnselmo_" target="_blank"><i class="fa-brands fa-twitter"></i></a>
